fixed font size on mobile

--- a/style.css
+++ b/style.css
@@ -1,11 +1,16 @@
 * {
-    margin: 1px 0px;
+  margin: 1px 0px;
 	padding: 0;
 	font: inherit;
 	vertical-align: baseline;
-    font-size: 20px;
-    font-family: 'Montserrat', sans-serif;
+  font-size: 20px;
+  font-family: 'Montserrat', sans-serif;
+}
 
+@media only screen and (max-width: 500px) {
+  * {
+    font-size: 14px;
+  }
 }
 
 .material-icons {
@@ -36,6 +41,7 @@
 body {
   display: grid;
   grid-template-columns: 1fr min(70ch, calc(100% - 16px)) 1fr;
+  /* font-size: 2rem; */
 }
 
 #wrapper {
@@ -64,7 +70,8 @@ button {
     border: 1px solid #ccc;
     background-color: #F6F6F6;
     cursor: pointer;
-    width: 15%;
+    /* width: 15%; */
+    padding: 1rem;
 }
 
 .inputWrapper {
@@ -111,14 +118,14 @@ input:focus{
 
 li {
   grid-column: 2;
-    list-style-type: none;
-    padding: 1rem;
-    background-color: #F6F6F6;
-    border: solid 1px transparent;
-    overflow: hidden;  
-    border-radius: 3px;
-    /* width: 100%; */
-    flex-grow: 2;
+  list-style-type: none;
+  padding: 1rem;
+  background-color: #F6F6F6;
+  border: solid 1px transparent;
+  overflow: hidden;  
+  border-radius: 3px;
+  /* width: 100%; */
+  flex-grow: 2;
 }
 @media (hover: hover) { 
     .liDiv:hover > .buttonDiv {
